tests/language_modules/08_routines/valid/procedure_call.vf
module ProcedureCall

procedure mark(flag: Boolean)
is
    check flag
end mark

procedure main()
is
    call mark(true)
end main

end ProcedureCall