tests/language_modules/08_routines/invalid_semantics/keyword_procedure_name.vf
module KeywordProcedureName

procedure return()
is
    check true
end return

end KeywordProcedureName